[package]
name = "gl-struct"
version = "0.1.0"
authors = ["Joshua Smith <jsmith62831@gmail.com>"]

[dependencies]
bitflags = "1.1"
derivative = "1.0"
gl = "0.14"
num-traits = "0.2"
glfw = {version = "0.37", optional = true}
glutin = {version = "0.24", optional = true}

[dev-dependencies]
glfw = "0.34"
rand = "0.5.5"
rayon = "1.0.3"

[features]
default = []

#if the user wants arrays greater than 32 to have GLSLType implemented
#NOTE: this can DRASTICALLY increase compile-times
large_uniform_arrays = []
extra_large_uniform_arrays = []

#for implementing ContextProvider for glfw Windows
glfw-context = ["glfw"]

#for implementing ContextProvider on glutin Contexts
glutin-context = ["glutin"]
