[package]
name = "gl-struct"
authors = ["Joshua Smith <jsmith62831@gmail.com>"]
description = "Safe but transparent wrappers for the OpenGL API"
version = "0.0.1"
edition = "2021"
keywords = ["opengl", "gamedev", "wrapper", "api"]
categories = ["api-bindings", "rendering::graphics-api"]
repository = "https://github.com/jsmith628/gl-struct"
documentation = "https://docs.rs/gl-struct"
license = "MIT"
readme = "README.md"

[dependencies]
gl = "0.12.0"

[dev-dependencies]
glfw = "0.27.0"
rand = "0.5.5"
rayon = "1.0.3"

[features]
default = []
large_uniform_arrays = []
extra_large_uniform_arrays = []
